--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,47 +1,59 @@
 version: 1.0.{build}
-image: Visual Studio 2015
+image: Visual Studio 2017
 
+
+environment:
+  matrix:
+    - PlatformToolset: VS15
+    - PlatformToolset: VS17
 
 platform:
-    #- Any CPU
     - x86
     - x64
+    - Any CPU
 
 configuration:
-    - Debug
     - Release
+    - Debug
 
 install:
-    - call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat"
+    - if "%platform%"=="x86" set archi=x86
+    - if "%platform%"=="x86" set platform_input=x86
 
-build:
-    parallel: true                  # enable MSBuild parallel builds
-    verbosity: minimal
+    - if "%platform%"=="x64" set archi=amd64
+    - if "%platform%"=="x64" set platform_input=x64
+
+    - if "%platform%"=="Any CPU" set archi=x86
+    - if "%platform%"=="Any CPU" set platform_input=Any CPU
+
+    - if "%PlatformToolset%"=="VS15" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" %archi%
+    - if "%PlatformToolset%"=="VS17" call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvarsall.bat" %archi%
+
 
 build_script:
     - cd "%APPVEYOR_BUILD_FOLDER%"
-    - msbuild MusicPlayer.sln /m /p:configuration="%configuration%" /p:platform="%platform%"
+    - msbuild MusicPlayer.sln /m /p:configuration="%configuration%" /p:platform="%platform_input%"  /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll"
 
 after_build:
     - cd "%APPVEYOR_BUILD_FOLDER%"\MusicPlayer
     - ps: >-
 
-        if ($env:PLATFORM -eq "x64") {
-            Push-AppveyorArtifact "bin\$($env:PLATFORM)\$($env:CONFIGURATION)\MusicPlayer.dll" -FileName MusicPlayer.dll
+        if ($env:PLATFORM_INPUT -eq "x64" -and $env:CONFIGURATION -eq "Release") {
+            #Push-AppveyorArtifact "bin\$env:PLATFORM_INPUT\$env:CONFIGURATION\MusicPlayer.dll" -FileName MusicPlayer.dll
         }
 
-        if ($env:PLATFORM -eq "x86" ) {
-            Push-AppveyorArtifact "bin\$($env:PLATFORM)\$($env:CONFIGURATION)\MusicPlayer.dll" -FileName MusicPlayer.dll
+        if ($env:PLATFORM_INPUT -eq "x86" -and $env:CONFIGURATION -eq "Release") {
+            #Push-AppveyorArtifact "bin\$env:PLATFORM_INPUT\$env:CONFIGURATION\MusicPlayer.dll" -FileName MusicPlayer.dll
         }
 
-        if ($($env:APPVEYOR_REPO_TAG) -eq "true" -and $env:CONFIGURATION -eq "Release") {
-            if($env:PLATFORM -eq "x64"){
-            $ZipFileName = "MusicPlayer_$($env:APPVEYOR_REPO_TAG_NAME)_x64.zip"
-            7z a $ZipFileName bin\$env:CONFIGURATION\MusicPlayer.dll
+        if ($($env:APPVEYOR_REPO_TAG) -eq "true" -and $env:CONFIGURATION -eq "Release" -and $env:PLATFORMTOOLSET -eq "VS17") {
+            if($env:PLATFORM_INPUT -eq "x64"){
+              $ZipFileName = "MusicPlayer_$($env:APPVEYOR_REPO_TAG_NAME)_x64.zip"
+              7z a $ZipFileName bin\$env:PLATFORM_INPUT\$env:CONFIGURATION\MusicPlayer.dll
             }
-            if($env:PLATFORM -eq "x86"){
-            $ZipFileName = "MusicPlayer_$($env:APPVEYOR_REPO_TAG_NAME)_x86.zip"
-            7z a $ZipFileName bin\$env:PLATFORM\$env:CONFIGURATION\MusicPlayer.dll
+            if($env:PLATFORM_INPUT -eq "x86"){
+              $ZipFileName = "MusicPlayer_$($env:APPVEYOR_REPO_TAG_NAME)_x86.zip"
+              7z a $ZipFileName bin\$env:CONFIGURATION\MusicPlayer.dll
             }
         }
 
@@ -59,4 +71,5 @@ deploy:
     force_update: true
     on:
         appveyor_repo_tag: true
+        PlatformToolset: VS17
         configuration: Release
